--- a/templates/template_wedding_5/index.html
+++ b/templates/template_wedding_5/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">   
     <title>Template Wedding | Homepage</title>
     <link rel="shortcut icon" href="images/ico.ico">
-    <!-- Customize css -->
-    <link rel="stylesheet" type="text/css" href="../../css/animation.css" >    
-    <link rel="stylesheet" type="text/css" href="../../css/default.css">
-    <link rel="stylesheet" type="text/css" href="style-wedding-5.css">
     <!-- Features css -->
     <link rel="stylesheet" href="../../features/animatecss/animate.min.css">
     <!--Node Modules css-->
@@ -17,6 +13,10 @@
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <!-- Customize css -->
+    <link rel="stylesheet" type="text/css" href="../../css/animation.css" >    
+    <link rel="stylesheet" type="text/css" href="../../css/default.css">
+    <link rel="stylesheet" type="text/css" href="style-wedding-5.css">
 </head>
 <body>
     <div id="homepage">
@@ -377,9 +377,9 @@
                                 <tr>
                                     <td><label>Are You Attending? *</label></td>
                                     <td>
-                                        <input type="radio" id="yes" name="gender" value="yes">
+                                        <input type="radio" id="yes" name="your-attending" value="yes">
                                         <label class="radio mr-m-10p mr-lg-5p" for="yes">Yes</label>
-                                        <input type="radio" id="no" name="gender" value="no">
+                                        <input type="radio" id="no" name="your-attending" value="no">
                                         <label class="radio" for="no">No</label>
                                     </td>
                                 </tr>
@@ -412,7 +412,7 @@
                                     </td>
                                 </tr>
                             </table>
-                            <input type="submit" class="button-green w-m-100p bs d-block d-lg-none" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
+                            <input type="submit" value="SUBMIT" class="button-green w-m-100p bs d-block d-lg-none" data-toggle="modal" data-target="#ebrochure" />
                         </form>
                     </div>
                 </div>
